force-app/main/default/objects/qb_Payment__c/qb_Payment__c.object-meta.xml
<CustomObject>
    <label>Quickbooks Payment</label>
    <nameField>
        <label>Payment #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbooks Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>