force-app/main/default/objects/qb_Payment__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>Currency Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>