force-app/main/default/objects/qb_Payment__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>Customer Id</label>
    <length>90</length>
    <type>Text</type>
</CustomField>