force-app/main/default/objects/qb_Payment__c/fields/domain__c.field-meta.xml
<CustomField>
    <fullName>domain__c</fullName>
    <label>domain</label>
    <length>10</length>
    <type>Text</type>
</CustomField>