force-app/main/default/objects/qb_Payment__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>