force-app/main/default/objects/qb_Payment__c/fields/LastUpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedTime__c</fullName>
    <label>LastUpdatedTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>