force-app/main/default/objects/qb_Payment__c/fields/ProcessPayment__c.field-meta.xml
<CustomField>
    <fullName>ProcessPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentProcess</label>
    <type>Checkbox</type>
</CustomField>