force-app/main/default/objects/qb_Payment__c/fields/Send_to_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Send_to_QuickBooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to QuickBooks</label>
    <type>Checkbox</type>
</CustomField>