force-app/main/default/objects/qb_Payment__c/fields/TotalAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalAmt__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>