force-app/main/default/objects/qb_Payment__c/fields/UnappliedAmt__c.field-meta.xml
<CustomField>
    <fullName>UnappliedAmt__c</fullName>
    <label>Unapplied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>